--- a/index.html
+++ b/index.html
@@ -3,32 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page de Connexion</title>
+    <title>Page d'accueil avec recherche IA et connexion</title>
     <link rel="stylesheet" href="css.css"> <!-- Lien vers le CSS principal -->
     <link rel="stylesheet" href="css-login.css"> <!-- Lien vers le CSS spécifique à la page de login -->
 </head>
 <body>
     <div class="container">
-        <div class="login-form">
-            <h2>Se connecter</h2>
-            <form action="#" method="post">
-                <div class="form-group">
-                    <label for="username">Nom d'utilisateur</label>
-                    <input type="text" id="username" name="username" placeholder="Entrez votre nom d'utilisateur" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Mot de passe</label>
-                    <input type="password" id="password" name="password" placeholder="Entrez votre mot de passe" required>
-                </div>
-                <div class="form-group">
-                    <button type="submit">Se connecter</button>
-                </div>
-                <div class="form-footer">
-                    <a href="#">Mot de passe oublié ?</a>
-                    <a href="#">Créer un compte</a>
-                </div>
-            </form>
+        <!-- Barre de recherche -->
+        <div class="search-box">
+            <h1>Recherche IA</h1>
+            <input type="text" id="searchInput" placeholder="Rechercher...">
+            <button onclick="search()">Lancer la recherche</button>
+            <div id="searchResults"></div>
+        </div>
+
+        <!-- Bouton de connexion -->
+        <div class="login-btn">
+            <a href="login.html"><button>Se connecter</button></a>
         </div>
     </div>
+
+    <script>
+        // Fonction de recherche avec l'API de DuckDuckGo
+        function search() {
+            const query = document.getElementById('searchInput').value;
+            const resultsContainer = document.getElementById('searchResults');
+            
+            if (!query) {
+                resultsContainer.innerHTML = "<div>Veuillez entrer une recherche.</div>";
+                return;
+            }
+            
+            // Affichage d'un message "Recherche en cours"
+            resultsContainer.innerHTML = "<div>Recherche en cours...</div>";
+
+            // URL de l'API DuckDuckGo
+            const url = `https://api.duckduckgo.com/?q=${encodeURIComponent(query)}&format=json`;
+
+            // Faire la requête fetch
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    // Réinitialiser les résultats
+                    resultsContainer.innerHTML = '';
+
+                    // Vérifier si des résultats sont disponibles
+                    if (data.AbstractText) {
+                        resultsContainer.innerHTML = `
+                            <div class="result">
+                                <h3>Réponse instantanée :</h3>
+                                <p>${data.AbstractText}</p>
+                            </div>
+                        `;
+                    } else if (data.RelatedTopics && data.RelatedTopics.length > 0) {
+                        // Affichage des résultats
+                        data.RelatedTopics.forEach(item => {
+                            const resultElement = document.createElement('div');
+                            resultElement.className = 'result';
+                            resultElement.innerHTML = `
+                                <a href="${item.FirstURL}" target="_blank"><strong>${item.Text}</strong></a>
+                                <p>${item.Result}</p>
+                            `;
+                            resultsContainer.appendChild(resultElement);
+                        });
+                    } else {
+                        resultsContainer.innerHTML = '<div>Aucun résultat trouvé</div>';
+                    }
+                })
+                .catch(error => {
+                    console.error('Erreur de recherche :', error);
+                    resultsContainer.innerHTML = '<div>Une erreur est survenue lors de la recherche.</div>';
+                });
+        }
+    </script>
 </body>
 </html>
